# lipm_walking_controller

./: .clang-format  .clang-format-check.sh  .clang-format-common.sh  .clang-format-fix.sh  .gitignore  .gitmodules  AUTHORS  CHANGELOG.md  CITATION.cff  CMakeLists.txt  COMMITS.md  LICENSE  README.md  package.xml
doc/: Doxyfile.extra.in  Makefile  build.dox  docker.dox  header.html  mainpage.dox  overview.dox  stabilizer.dox  troubleshooting.dox  walkgen.dox
etc/: LIPMWalking.conf.cmake  display.rviz  mc_rtc.conf
etc/mc_log_ui/: custom_plot.json
include/lipm_walking/: Contact.h  Controller.h  FloatingBaseObserver.h  FootstepInterpolator.h  FootstepPlan.h  HorizontalMPC.h  HorizontalMPCProblem.h  HorizontalMPCSolution.h  ModelPredictiveControl.h  NetWrenchObserver.h  Pendulum.h  PendulumObserver.h  PlanInterpolator.h  Preview.h  Sole.h  Stabilizer.h  State.h  SwingFoot.h  defs.h
include/lipm_walking/utils/: AvgStdEstimator.h  ExponentialMovingAverage.h  Integrator.h  LeakyIntegrator.h  LowPassVelocityFilter.h  SE2d.h  StationaryOffsetFilter.h  VelocityFilter.h  clamp.h  polynomials.h  ros.h  rotations.h  slerp.h  stats.h  world.h
launch/: display.launch  display_hrp2.launch  display_hrp4.launch
logs/: README.md  display_logs.py
logs/mc_log_ui/: __init__.py  custom_plot.json  icon.py  mc_log_data.py  mc_log_plotcanvas.py  mc_log_tab.py  mc_log_tab_widget.py  mc_log_types.py  mc_log_ui.py  mc_log_utils.py
logs/mc_log_ui/ui/: __init__.py  mc_log_main_ui.py  mc_log_tab_ui.py
src/: CMakeLists.txt  Controller.cpp  ControllerGUI.cpp  FloatingBaseObserver.cpp  FootstepInterpolator.cpp  FootstepPlan.cpp  HorizontalMPCProblem.cpp  HorizontalMPCSolution.cpp  ModelPredictiveControl.cpp  NetWrenchObserver.cpp  Pendulum.cpp  PendulumObserver.cpp  PlanInterpolator.cpp  Preview.cpp  Python.cpp  Stabilizer.cpp  SwingFoot.cpp  lib.cpp  ros.cpp
src/states/: CMakeLists.txt  DoubleSupport.cpp  DoubleSupport.h  Initial.cpp  Initial.h  SingleSupport.cpp  SingleSupport.h  Standing.cpp  Standing.h
