<?xml version="1.0"?>
<package>
    <name>lipm_walking_controller</name>
    <version>1.2.0</version>
    <description>Walking controller based on linear inverted pendulum tracking</description>
    <maintainer email="stephane.caron@lirmm.fr">Stéphane Caron</maintainer>
    <license>LGPLv3</license>
    <url type="repository"></url>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>roslib</build_depend>
    <build_depend>rviz</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>tf</build_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>jvrc_description</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>roslib</run_depend>
    <run_depend>rviz</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>tf</run_depend>
</package>
